bug: Fix z-index of navbar and scrolling alert bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ p {
     left: 0;
     padding-left: 0;
     padding-right: 0;
-    z-index: 1;
+    z-index: 2;
 }
 
 .navbar {
